--- a/style.css
+++ b/style.css
@@ -2,24 +2,49 @@
   margin: 0;
   padding: 0;
   font-family: "Poppins", "san-serif";
+  scroll-behavior: smooth;
 }
+.video-background {
+  position: relative;
+  min-width: 100vw;
+  min-height: 100vh;
+
+
+  z-index: 1;
+  overflow: hidden;
+  justify-content: center;
+  align-items: center;
+  object-fit: cover;
+}
+.video-background video {
+  position: absolute;
+  width: 140vw;
+  height: 100vh;
+  margin-left: -14rem;
+  margin-bottom:-2rem;
+
+  margin-top: -2rem;
+  object-fit: cover;
+
+
+}
+
 .header {
   min-height: 100vh;
-  width: 100%;
-  background-image: linear-gradient(rgba(4, 9, 30, 0.7)),
-    url(Eduford-Assets/eduford_img/banner.png);
-  background-position: center;
-  background-size: cover;
-  position: relative;
+  padding: 0;
+  margin: 0;
+  text-align: center;
+  justify-content: center;
 }
 nav {
   display: flex;
   padding: 2% 6%;
   justify-content: space-between;
-  align-items: center;
 }
+
 nav img {
   width: 150px;
+  position: relative;
 }
 .nav-links {
   flex: 1;
@@ -48,14 +73,22 @@ nav img {
 .nav-links ul li:hover::after{
     width: 100%;
 }
-.text-box{
-    width: 90%;
-    color:#fff;
+.header h1{
+  text-align: center;
+  color: #f44336;
+}
+
+
+.header .text-box{
+    min-width: 100%;
     position: absolute;
-    top: 50%;
+    margin-top: 20%;
     left: 50%;
     transform: translate(-50%,-50%);
     text-align: center;
+}
+.header .text-box p{
+  color: #f44336;
 }
 .text-box h1{
     font-size: 62px;
@@ -87,11 +120,15 @@ nav .fa{
 }
 
 @media(max-width: 700px){
+  .header{
+    background: transparent;
+  }
   .text-box h1 {
     font-size: 20px;
   }
   .nav-links ul li{
     display: block;
+
   }
   .nav-links {
     position: absolute;
@@ -103,6 +140,8 @@ nav .fa{
     text-align: left;
     z-index: 2 ;
     transition: 1s;
+    background: transparent !important;
+    backdrop-filter: blur(5px);
   }
   nav .fa{
     display: block;
@@ -115,82 +154,224 @@ nav .fa{
     padding: 15px;
   }
 }
+@media (max-width: 768px) {
+  .header{
+    background: transparent;
+  }
+  .nav-links{
+    background: transparent;
+    backdrop-filter: blur(5px);
+  }
+
+}
 /*----------course-------*/
 .course{
-  width:80% ;
-  margin: auto;
   text-align: center;
-  padding-top: 100px;
+  background-image: linear-gradient(rgba(4, 9, 30, 0.7)), url('Eduford-Assets/eduford_img/background.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  min-height: 100vh;
+
+
 }
-h1{
-  font-size: 36px;
+.course nav {
+  background: brown;
+  display: flex;
+  padding: 1% 6%;
+  justify-content: space-between;
+  align-items: center;
+}
+.course nav img {
+  width: 150px;
+  position: relative;
+}
+.course nav ul {
+  flex: 1;
+  text-align: right;
+
+}
+.course nav ul li{
+  list-style: none;
+  display: inline-block;
+  padding: 3px 12px;
+  position: relative;
+
+}
+.course nav ul li a{
+  color: #fff;
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 200;
+}
+.course ul li::after{
+    content: '';
+    width: 0%;
+    height: 2px;
+    background: #f44336;
+    display: block;
+    margin: auto;
+    transition: 0.5s;
+}
+.course ul li:hover::after{
+    width: 100%;
+}
+.course h1{
+  margin-top: 5rem;
+  font-size: 3rem;
   font-weight: 600;
+  padding-bottom: 1rem;
+  color:#f1caca;
 }
-p{
-  color: #777;
+.course h2{
+  color: white;
+  font-size: 18px;
+  font-weight: 200;
+  margin-top: 2%;
+}
+.course p{
+  color: gray;
+  margin-top: 1rem;
   font-size: 14px;
   font-weight: 300;
-  line-height: 22px;
+  line-height: 20px;
   padding: 10px;
+
 }
-.row{
-  margin-top: 5%;
+.course .row{
+  margin-top: 4%;
   display: flex;
   justify-content: space-between;
 }
 .course-col{
-  flex-basis: 31%;
-  background: #fff3f3;
+  flex-basis: 32%;
+  background: #f1caca;
   border-radius: 10px;
+  margin: 45px;
   margin-bottom: 5%;
-  padding: 20px 12px;
+  padding: 8px 12px;
   box-sizing: border-box;
+
 }
-h3{
+.course-col p{
+  align-items: center;
   text-align: center;
+  justify-content: center;
+  padding-top:1rem;
+  font-size: 17px;
+  line-height: 1.3;
+
+}
+.course h3{
+  text-align: center;
+  font-size:30px;
   font-weight: 600;
   margin: 10px 0;
+  padding-top: 2rem;
 }
 .course-col:hover{
-  box-shadow: 0 0 20px 0px rgba(0,0,0,0.4);
+  box-shadow: 0 0 20px 0px rgb(0, 0,0,0.8);
 }
 @media(max-width: 700px){
   .row{
     flex-direction: column;
   }
+
 }
 /*----- campus -----*/
 
 .campus{
-  width: 80%;
-  margin: auto;
   text-align: center;
-  padding-top: 50px;
+  background-image: linear-gradient(rgba(4, 9, 30, 0.7)), url('Eduford-Assets/eduford_img/banner.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  min-height: 100vh;
+
+}
+.campus nav {
+  position: relative;
+  width: auto;
+  background:brown;
+  display: flex;
+  padding: 1% 6%;
+  justify-content: space-between;
+  align-items: center;
+}
+.campus nav ul {
+  flex: 1;
+  text-align: right;
+
+}
+.campus nav ul li{
+  list-style: none;
+  display: inline-block;
+  padding: 3px 12px;
+  position: relative;
+
+}
+.campus nav ul li a{
+  color: #fff;
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 200;
+}
+.campus ul li::after{
+    content: '';
+    width: 0%;
+    height: 2px;
+    background: #f44336;
+    display: block;
+    margin: auto;
+    transition: 0.5s;
+}
+.campus ul li:hover::after{
+    width: 100%;
+}
+.campus h1{
+  position: relative;
+  margin-top:20px;
+  color: #f44336;
+  padding: 8px;
+  font-size: 3rem;
+}
+.campus p{
+  padding-top: 10px;
+  color: white;
+}
+.campus .row{
+  display: flex;
+  justify-content: space-between;
+  margin-top:0;
 }
 .campus-col{
+  width: 100%;
+  height: 100%;
   flex-basis:32%;
-  border-radius: 10px;
-  margin-bottom: 30px;
+  margin: 40px;
   position: relative;
   overflow: hidden;
 }
 .campus-col img{
   width: 100%;
+  height: 100%;
   display: block;
+  border-radius: 10px;
 }
-.layer{
+.campus-col .layer{
   background: transparent;
   height: 100%;
   width: 100%;
   position: absolute;
-  top: 0;
+  top:0;
+  border-radius:10px ;
   left: 0;
   transition: 0.5s;
 }
-.layer:hover{
+.campus-col .layer:hover{
   background: rgba(226,0,0,0.7);
 }
-.layer h3{
+.campus-col .layer h3{
   width: 100%;
   font-weight: 500;
   color: #fff;
@@ -209,43 +390,157 @@ h3{
 
 /*------facilities-------*/
 .facilities{
-  width: 80%;
-  margin: auto;
   text-align: center;
-  padding-top: 100px;
 }
+.facilities nav {
+  width: auto;
+  background:brown;
+  display: flex;
+  padding: 1% 6%;
+  justify-content: space-between;
+  align-items: center;
+}
+.facilities nav ul {
+  flex: 1;
+  text-align: right;
+
+}
+.facilities nav ul li{
+  list-style: none;
+  display: inline-block;
+  padding: 3px 12px;
+  position: relative;
+
+}
+.facilities nav ul li a{
+  color: #fff;
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 200;
+}
+.facilities ul li::after{
+    content: '';
+    width: 0%;
+    height: 2px;
+    background: #f44336;
+    display: block;
+    margin: auto;
+    transition: 0.5s;
+}
+.facilities ul li:hover::after{
+    width: 100%;
+}
+.facilities h1{
+  margin-top: 1rem;
+  font-size: 3rem;
+  font-weight: 800;
+  padding-bottom: 1.5rem;
+}
+.facilities p{
+  position: relative;
+  text-align: center;
+  font-size: 16px;
+  line-height: 1.3;
+
+}
+.facilities .row{
+  margin-top: 4%;
+  display: flex;
+  justify-content: space-between;
+}
+
 .facilities-col {
-  flex-basis: 31%;
+  margin: 20px;
+  flex-basis: 30%;
   border-radius: 10px;
-  margin-bottom: 5%;
+  margin-top:-2.5rem ;
   text-align: left;
 }
+.facilities-col-it{
+  height: 10rem;
+}
 .facilities-col img {
+  margin-top: 1.5rem;
   width: 100%;
   border-radius: 10px;
 }
 .facilities-col p{
+  margin-top: 1px;
   padding: 0;
+  text-align: center;
 }
 .facilities-col h3{
-  margin-top: 16px;
   margin-bottom: 15px;
-  text-align: left;
+  text-align: center;
 }
 /*----testimonials-----*/
+
 .testimonials{
-  width: 80%;
-  margin :auto;
-  padding: 100px;
   text-align: center;
+  padding-top: 0%;
+
+}
+.testimonials nav {
+  background: brown;
+  display: flex;
+  padding: 1% 6%;
+
+  justify-content: space-between;
+  align-items: center;
+}
+.testimonials nav ul {
+  flex: 1;
+  text-align: right;
+
+}
+.testimonials nav ul li{
+  list-style: none;
+  display: inline-block;
+  padding: 3px 12px;
+  position: relative;
+
+}
+.testimonials nav ul li a{
+  color: #fff;
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 200;
+}
+.testimonials ul li::after{
+    content: '';
+    width: 0%;
+    height: 2px;
+    background: #f44336;
+    display: block;
+    margin: auto;
+    transition: 0.5s;
+}
+.testimonials ul li:hover::after{
+    width: 100%;
+}
+.testimonials h1{
+ margin-top: 5%;
+ font-size: 3rem;
+}
+.testimonials h2{
+  font-size: 22px;
+  margin-top: 1%;
+  font-weight: 200;
+  color: blue;
+}
+.testimonials .row{
+  margin-top: 3%;
+  display: flex;
+  justify-content: space-between;
 }
 .testimonial-col{
   flex-basis: 44%;
   border-radius: 10px;
   margin-bottom: 5%;
   text-align: left;
-  background: #fff3f3;
+  background: #4b86f3;
   padding: 25px;
+  margin: 50px;
   cursor: pointer;
   display: flex;
 }
@@ -257,13 +552,14 @@ h3{
 }
 .testimonial-col p{
   padding: 0;
+  color: black;
 }
 .testimonial-col h3{
   margin-top: 15px;
   text-align: left;
 }
 .testimonial-col .fa{
-  color:#f44336;
+  color:gold;
 }
 @media(max-width: 700px){
   .testimonial-col img{
@@ -271,24 +567,59 @@ h3{
     margin-right: 15px;
   }
 }
-/*----call to action---*/
-.cta {
-  margin:100px auto;
-  width: 80%;
+/*----contact---*/
+.contact{
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  text-align: center;
+  padding: 50px 20px;
+  margin: 3%;
   background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(Eduford-Assets/eduford_img/banner2.jpg);
   background-position: center;
   background-size: cover;
   border-radius: 10px;
+}
+.contact-box {
+  position: relative;
+  display: flex;
+  width: 50%;
+  min-height: 100%;
+  min-width: 70%;
+  margin-top: 20%;
+  margin-left: 7%;
   text-align: center;
-  padding: 100px 0;
 }
-.cta h1{
+
+.contact h1{
+  position: absolute;
+  margin-top: -8rem;
   color: #fff;
-  margin-bottom: 40px;
-  padding: 0;
+  text-align: center;
+  justify-content: center;
 }
+
+.contact-btn{
+  margin-left: 35%;
+  display: inline-block;
+  text-decoration: none;
+  color: #fff;
+  border: 1px solid #fff;
+  padding: 12px 34px;
+  font-size: 13px;
+  background: transparent;
+  position: relative;
+  cursor: pointer;
+}
+.contact-btn:hover {
+  border: 1px solid #f44336;
+  background: #f44336;
+  transition: 2s;
+
+}
+
 @media(max-width: 700px){
-  .cta h1{
+  .contact h1{
     font-size: 24px;
   }
 }
@@ -300,8 +631,13 @@ h3{
 }
 .footer h4{
   margin-bottom: 25px;
-  margin-top: 20px;
+  margin-top: 15px;
   font-weight: 600;
+}
+.footer p{
+  text-align: center;
+  align-items: center;
+  justify-content: center;
 }
 .icons .fa{
   color: #f44336;
