--- a/style.css
+++ b/style.css
@@ -8,8 +8,6 @@
   position: relative;
   min-width: 100vw;
   min-height: 100vh;
-
-
   z-index: 1;
   overflow: hidden;
   justify-content: center;
@@ -22,7 +20,6 @@
   height: 100vh;
   margin-left: -14rem;
   margin-bottom:-2rem;
-
   margin-top: -2rem;
   object-fit: cover;
 
@@ -35,19 +32,38 @@
   margin: 0;
   text-align: center;
   justify-content: center;
+  background: transparent;
+  backdrop-filter: blur(2px);
 }
-nav {
+
+.header .logo {
+  color: gold;
+  display: inline-block;
+  position: absolute;
+  padding: 1.5px 3%;
+  font-size: 30px;
+  font-weight: 600;
+  margin-left: -4rem;
+}
+.header nav {
   display: flex;
   padding: 2% 6%;
   justify-content: space-between;
+
 }
 
-nav img {
-  width: 150px;
-  position: relative;
-}
 .nav-links {
+  display: block;
   flex: 1;
+
+
+}
+.nav-links ul{
+  display: flex;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  justify-content: right;
   text-align: right;
 }
 .nav-links ul li {
@@ -55,11 +71,14 @@ nav img {
   display: inline-block;
   padding: 8px 12px;
   position: relative;
+  margin: 0 10px;
+
 }
 .nav-links ul li a {
-  color: #ffff;
+  color:gold ;
   text-decoration: none;
-  font-size: 13px;
+  font-size: 16px;
+  font-weight: 700;
 }
 .nav-links ul li::after{
     content: '';
@@ -74,8 +93,12 @@ nav img {
     width: 100%;
 }
 .header h1{
+  margin-top: 2rem;
+  font-size: 62px;
   text-align: center;
   color: #f44336;
+  right: 0;
+  left: 0;
 }
 
 
@@ -88,26 +111,23 @@ nav img {
     text-align: center;
 }
 .header .text-box p{
-  color: #f44336;
-}
-.text-box h1{
-    font-size: 62px;
-}
-.text-box p {
+  color:black ;
+  font-weight: 800;
+  font-size: 18px;
   margin: 10px 0 40px;
-  font-size: 14px;
-  color: #fff;
 }
+
 .hero-btn{
   display: inline-block;
   text-decoration: none;
-  color: #fff;
-  border: 1px solid #fff;
+  color: white;
+  border: 1.5px solid #fff;
   padding: 12px 34px;
   font-size: 13px;
   background: transparent;
   position: relative;
   cursor: pointer;
+  background-color: goldenrod;
 }
 .hero-btn:hover {
   border: 1px solid #f44336;
@@ -117,94 +137,146 @@ nav img {
 }
 nav .fa{
   display: none;
+
 }
 
 @media(max-width: 700px){
   .header{
-    background: transparent;
+    position: relative;
   }
-  .text-box h1 {
+  .video-background{
+    position: fixed;
+  }
+  .header.text-box h1 {
     font-size: 20px;
-  }
-  .nav-links ul li{
-    display: block;
-
-  }
-  .nav-links {
     position: absolute;
-    background: #f44336;
+  }
+  .header .nav-links ul li{
+    display: block;
+  }
+  .header .nav-links {
+    position: relative;
+    display: none;
     height: 100vh;
     width: 200px;
     top: 0;
-    right: -200px;
+    right: -100px;
     text-align: left;
     z-index: 2 ;
     transition: 1s;
-    background: transparent !important;
-    backdrop-filter: blur(5px);
+    justify-content: left;
+    flex: 1;
+    text-align: right;
   }
-  nav .fa{
+  .header nav .fa{
     display: block;
     color: #fff;
-    margin: 10%;
+    margin: 5%;
     font-size: 22px;
     cursor: pointer;
+    margin-top: 1rem;
+
   }
-  .nav-links ul{
-    padding: 15px;
-  }
-}
-@media (max-width: 768px) {
-  .header{
-    background: transparent;
-  }
-  .nav-links{
-    background: transparent;
-    backdrop-filter: blur(5px);
+  .header .nav-links ul{
+    padding: 10px;
   }
 
+
 }
-/*----------course-------*/
-.course{
+@media (max-width: 778px){
+  .header{
+    position: relative;
+
+  }
+  .header .nav-links{
+    position: relative;
+    display: block;
+    justify-content: space-between;
+    text-align: right;
+    line-height: 1.2;
+    z-index: 1000;
+  }
+  .header nav ul {
+    display: flex;
+    flex: 1;
+    text-align: right;
+    justify-content:  right;
+    margin-right: -15px;
+  }
+  .header nav ul li{
+    margin: -2px;
+  }
+  .header .logo{
+    display: fixed;
+    font-size: 18px;
+    padding: 3% 8%;
+    margin-top: -2.5%;
+  }
+  .header .text-box{
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    max-width: 90%;
+  }
+  .header .text-box h1{
+    font-size: 22px;
+    position: absolute;
+    margin-top: 20rem;
+  }
+  .header .text-box p{
+    display: fixed;
+    position: relative;
+    margin-top: 35rem;
+  }
+}*/
+/*----------services-------*/
+.services{
   text-align: center;
   background-image: linear-gradient(rgba(4, 9, 30, 0.7)), url('Eduford-Assets/eduford_img/background.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   min-height: 100vh;
-
-
 }
-.course nav {
+.services nav {
   background: brown;
   display: flex;
-  padding: 1% 6%;
+  padding: 2% 6%;
   justify-content: space-between;
   align-items: center;
 }
-.course nav img {
-  width: 150px;
-  position: relative;
+.services nav a{
+  text-decoration: none;
 }
-.course nav ul {
+.services .logo {
+  font-size: 1.5rem;
+  padding: -3% 3%;
+  margin-top:-0.7rem;
+  font-weight: 600;
+  color: whitesmoke;
+}
+
+.services nav ul {
   flex: 1;
   text-align: right;
-
 }
-.course nav ul li{
+.services nav ul li{
   list-style: none;
   display: inline-block;
   padding: 3px 12px;
   position: relative;
 
 }
-.course nav ul li a{
+.services nav ul li a{
   color: #fff;
   text-decoration: none;
   font-size: 16px;
   font-weight: 200;
 }
-.course ul li::after{
+.services ul li::after{
     content: '';
     width: 0%;
     height: 2px;
@@ -213,23 +285,25 @@ nav .fa{
     margin: auto;
     transition: 0.5s;
 }
-.course ul li:hover::after{
+.services ul li:hover::after{
     width: 100%;
 }
-.course h1{
-  margin-top: 5rem;
+.services h1{
+  position: relative;
+  text-align: center;
+  margin-top: 3rem;
   font-size: 3rem;
   font-weight: 600;
-  padding-bottom: 1rem;
   color:#f1caca;
 }
-.course h2{
-  color: white;
+.services h2{
+  text-align: center;
+  color:black ;
   font-size: 18px;
   font-weight: 200;
   margin-top: 2%;
 }
-.course p{
+.services p{
   color: gray;
   margin-top: 1rem;
   font-size: 14px;
@@ -238,12 +312,12 @@ nav .fa{
   padding: 10px;
 
 }
-.course .row{
-  margin-top: 4%;
+.services .row{
+  margin-top: 1%;
   display: flex;
   justify-content: space-between;
 }
-.course-col{
+.services-col{
   flex-basis: 32%;
   background: #f1caca;
   border-radius: 10px;
@@ -253,7 +327,7 @@ nav .fa{
   box-sizing: border-box;
 
 }
-.course-col p{
+.services-col p{
   align-items: center;
   text-align: center;
   justify-content: center;
@@ -262,25 +336,52 @@ nav .fa{
   line-height: 1.3;
 
 }
-.course h3{
+.services h3{
   text-align: center;
   font-size:30px;
   font-weight: 600;
   margin: 10px 0;
   padding-top: 2rem;
 }
-.course-col:hover{
+.services-col:hover{
   box-shadow: 0 0 20px 0px rgb(0, 0,0,0.8);
 }
-@media(max-width: 700px){
-  .row{
+@media(max-width: 775px){
+  .services {
+    position:relative;
+  }
+  .services .logo {
+    text-align: left;
+    margin-left: -40px;
+  }
+  .services nav{
+    position: relative;
+    justify-content: space-between;
+    padding: 3.5% 6%;
+  }
+  .services nav ul {
+    display: flex;
+    flex: 1;
+    text-align: right;
+    justify-content:  right;
+    margin-right: -50px;
+  }
+  .services nav ul li{
+    margin: -2px;
+  }
+  .services .row{
+    display: flex;
+
+  }
+  .services-col{
     flex-direction: column;
+
   }
 
 }
-/*----- campus -----*/
+/*----- Office -----*/
 
-.campus{
+.Office{
   text-align: center;
   background-image: linear-gradient(rgba(4, 9, 30, 0.7)), url('Eduford-Assets/eduford_img/banner.png');
   background-size: cover;
@@ -289,34 +390,43 @@ nav .fa{
   min-height: 100vh;
 
 }
-.campus nav {
+.Office .logo{
+  color: whitesmoke;
+  padding: -3% 3%;
+  margin-top:-0.7rem;
+  font-weight: 600;
+}
+.Office nav {
   position: relative;
   width: auto;
   background:brown;
   display: flex;
-  padding: 1% 6%;
+  padding: 2% 6%;
   justify-content: space-between;
   align-items: center;
 }
-.campus nav ul {
+.Office nav a{
+  text-decoration: none;
+}
+.Office nav ul {
   flex: 1;
   text-align: right;
 
 }
-.campus nav ul li{
+.Office nav ul li{
   list-style: none;
   display: inline-block;
   padding: 3px 12px;
   position: relative;
 
 }
-.campus nav ul li a{
+.Office nav ul li a{
   color: #fff;
   text-decoration: none;
   font-size: 16px;
   font-weight: 200;
 }
-.campus ul li::after{
+.Office ul li::after{
     content: '';
     width: 0%;
     height: 2px;
@@ -325,26 +435,26 @@ nav .fa{
     margin: auto;
     transition: 0.5s;
 }
-.campus ul li:hover::after{
+.Office ul li:hover::after{
     width: 100%;
 }
-.campus h1{
+.Office h1{
   position: relative;
   margin-top:20px;
   color: #f44336;
   padding: 8px;
   font-size: 3rem;
 }
-.campus p{
+.Office p{
   padding-top: 10px;
   color: white;
 }
-.campus .row{
+.Office .row{
   display: flex;
   justify-content: space-between;
   margin-top:0;
 }
-.campus-col{
+.Office-col{
   width: 100%;
   height: 100%;
   flex-basis:32%;
@@ -352,13 +462,13 @@ nav .fa{
   position: relative;
   overflow: hidden;
 }
-.campus-col img{
+.Office-col img{
   width: 100%;
   height: 100%;
   display: block;
   border-radius: 10px;
 }
-.campus-col .layer{
+.Office-col .layer{
   background: transparent;
   height: 100%;
   width: 100%;
@@ -368,10 +478,10 @@ nav .fa{
   left: 0;
   transition: 0.5s;
 }
-.campus-col .layer:hover{
+.Office-col .layer:hover{
   background: rgba(226,0,0,0.7);
 }
-.campus-col .layer h3{
+.Office-col .layer h3{
   width: 100%;
   font-weight: 500;
   color: #fff;
@@ -387,38 +497,79 @@ nav .fa{
   bottom: 49%;
   opacity: 1;
 }
-
-/*------facilities-------*/
-.facilities{
-  text-align: center;
+@media(max-width: 775px){
+  .office {
+    position:absolute;
+    display: fixed;
+  }
+  .office .logo {
+    text-align: left;
+    margin-left: -40px;
+  }
+  .office nav{
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    padding: 3.5% 6%;
+  }
+  .office nav ul {
+    display: flex;
+    flex: 1;
+    text-align: right;
+    justify-content:  right;
+    margin-right: -50px;
+  }
+  .office nav ul li{
+    margin: -2px;
+  }
 }
-.facilities nav {
+
+/*------About us-------*/
+.About-us{
+  text-align: center;
+  text-align: center;
+  background-image: linear-gradient(rgba(4, 9, 30, 0.7)), url('Eduford-Assets/eduford_img/ai-generated-8578444_1280.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  min-height: 100vh;
+}
+.About-us .logo{
+  color: whitesmoke;
+  padding: -3% 3%;
+  margin-top:-0.7rem;
+  font-weight: 600;
+}
+.About-us nav {
   width: auto;
   background:brown;
   display: flex;
-  padding: 1% 6%;
+  padding: 2% 6%;
   justify-content: space-between;
   align-items: center;
 }
-.facilities nav ul {
+.About-us nav a{
+  text-decoration: none;
+}
+.About-us nav ul {
   flex: 1;
   text-align: right;
 
 }
-.facilities nav ul li{
+.About-us nav ul li{
   list-style: none;
   display: inline-block;
   padding: 3px 12px;
   position: relative;
 
 }
-.facilities nav ul li a{
+.About-us nav ul li a{
   color: #fff;
   text-decoration: none;
   font-size: 16px;
   font-weight: 200;
 }
-.facilities ul li::after{
+.About-us ul li::after{
     content: '';
     width: 0%;
     height: 2px;
@@ -427,86 +578,106 @@ nav .fa{
     margin: auto;
     transition: 0.5s;
 }
-.facilities ul li:hover::after{
+.About-us ul li:hover::after{
     width: 100%;
 }
-.facilities h1{
+.About-us h1{
   margin-top: 1rem;
   font-size: 3rem;
   font-weight: 800;
   padding-bottom: 1.5rem;
+  color: #f44336;;
 }
-.facilities p{
+.About-us p{
   position: relative;
   text-align: center;
   font-size: 16px;
-  line-height: 1.3;
+  line-height: 1.4;
+  color: #fff;
 
 }
-.facilities .row{
+.About-us .row{
   margin-top: 4%;
   display: flex;
   justify-content: space-between;
 }
 
-.facilities-col {
+.About-us-col {
   margin: 20px;
   flex-basis: 30%;
   border-radius: 10px;
   margin-top:-2.5rem ;
   text-align: left;
 }
-.facilities-col-it{
+.About-us-col-it{
   height: 10rem;
 }
-.facilities-col img {
+.About-us-col img {
   margin-top: 1.5rem;
   width: 100%;
   border-radius: 10px;
 }
-.facilities-col p{
+.About-us-col p{
   margin-top: 1px;
   padding: 0;
   text-align: center;
 }
-.facilities-col h3{
-  margin-bottom: 15px;
+.About-us-col h3{
+  margin-bottom: 18px;
   text-align: center;
-}
-/*----testimonials-----*/
+  color: #f44336;
+  font-weight: 700;
 
-.testimonials{
+}
+/*----Goals-----*/
+
+.Goals{
   text-align: center;
   padding-top: 0%;
+    text-align: center;
+  text-align: center;
+  background-image: linear-gradient(rgba(4, 9, 30, 0.7)), url('Eduford-Assets/eduford_img/background-7038405.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  min-height: 100vh;
 
 }
-.testimonials nav {
+.Goals .logo{
+  color: whitesmoke;
+  padding: -3% 3%;
+  margin-top:-0.7rem;
+  font-weight: 600;
+}
+.Goals nav {
   background: brown;
   display: flex;
-  padding: 1% 6%;
-
+  padding: 2% 6%;
   justify-content: space-between;
   align-items: center;
 }
-.testimonials nav ul {
+.Goals nav a{
+  text-decoration: none;
+}
+.Goals nav ul {
   flex: 1;
   text-align: right;
 
 }
-.testimonials nav ul li{
+.Goals nav ul li{
   list-style: none;
   display: inline-block;
   padding: 3px 12px;
   position: relative;
 
 }
-.testimonials nav ul li a{
+.Goals nav ul li a{
   color: #fff;
   text-decoration: none;
   font-size: 16px;
   font-weight: 200;
 }
-.testimonials ul li::after{
+.Goals ul li::after{
     content: '';
     width: 0%;
     height: 2px;
@@ -515,25 +686,26 @@ nav .fa{
     margin: auto;
     transition: 0.5s;
 }
-.testimonials ul li:hover::after{
+.Goals ul li:hover::after{
     width: 100%;
 }
-.testimonials h1{
+.Goals h1{
  margin-top: 5%;
  font-size: 3rem;
+ color: #f44336;
 }
-.testimonials h2{
+.Goals h2{
   font-size: 22px;
   margin-top: 1%;
   font-weight: 200;
-  color: blue;
+  color: white;
 }
-.testimonials .row{
+.Goals .row{
   margin-top: 3%;
   display: flex;
   justify-content: space-between;
 }
-.testimonial-col{
+.Goals-col{
   flex-basis: 44%;
   border-radius: 10px;
   margin-bottom: 5%;
@@ -544,25 +716,25 @@ nav .fa{
   cursor: pointer;
   display: flex;
 }
-.testimonial-col img{
+.Goals-col img{
   height: 40px;
   margin-left: 5px;
   margin-right: 20px;
   border-radius: 50%;
 }
-.testimonial-col p{
+.Goals-col p{
   padding: 0;
   color: black;
 }
-.testimonial-col h3{
+.Goals-col h3{
   margin-top: 15px;
   text-align: left;
 }
-.testimonial-col .fa{
+.Goals-col .fa{
   color:gold;
 }
 @media(max-width: 700px){
-  .testimonial-col img{
+  .Goals-col img{
     margin-left: 0px;
     margin-right: 15px;
   }
