--- a/style.css
+++ b/style.css
@@ -1,29 +1,35 @@
 * {
   margin: 0;
+  margin-top:0;
   padding: 0;
   font-family: "Poppins", "san-serif";
-  scroll-behavior: smooth;
+
 }
+
 .video-background {
   position: relative;
-  min-width: 100vw;
-  min-height: 100vh;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100vw;
+  height: 100vh;
   z-index: 1;
   overflow: hidden;
   justify-content: center;
   align-items: center;
-  object-fit: cover;
+  size: cover;
+  background-position:center ;
+
 }
 .video-background video {
   position: absolute;
-  width: 140vw;
+  width: 130vw;
   height: 100vh;
-  margin-left: -14rem;
-  margin-bottom:-2rem;
-  margin-top: -2rem;
+  margin-left: -12rem;
+  margin-top: -1.2rem;
   object-fit: cover;
-
-
+  overflow: hidden;
 }
 
 .header {
@@ -33,30 +39,26 @@
   text-align: center;
   justify-content: center;
   background: transparent;
-  backdrop-filter: blur(2px);
+  backdrop-filter: blur(1.5px);
 }
-
 .header .logo {
   color: gold;
   display: inline-block;
   position: absolute;
-  padding: 1.5px 3%;
-  font-size: 30px;
+  padding: 2px 3%;
+  font-size: 25px;
   font-weight: 600;
   margin-left: -4rem;
 }
 .header nav {
   display: flex;
-  padding: 2% 6%;
+  padding: 2% 4.1%;
   justify-content: space-between;
-
 }
 
 .nav-links {
   display: block;
   flex: 1;
-
-
 }
 .nav-links ul{
   display: flex;
@@ -68,7 +70,7 @@
 }
 .nav-links ul li {
   list-style: none;
-  display: inline-block;
+  display: block;
   padding: 8px 12px;
   position: relative;
   margin: 0 10px;
@@ -82,33 +84,32 @@
 }
 .nav-links ul li::after{
     content: '';
-    width: 0%;
+    position: absolute;
+    width: 0;
+    left: 0;
     height: 2px;
     background: #f44336;
     display: block;
     margin: auto;
-    transition: 0.5s;
+    transition: width 0.3s ease;
 }
 .nav-links ul li:hover::after{
     width: 100%;
 }
 .header h1{
-  margin-top: 2rem;
   font-size: 62px;
   text-align: center;
   color: #f44336;
   right: 0;
   left: 0;
 }
-
-
 .header .text-box{
-    min-width: 100%;
-    position: absolute;
-    margin-top: 20%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    text-align: center;
+  min-width: 100%;
+  position: absolute;
+  margin-top: 18%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  text-align: center;
 }
 .header .text-box p{
   color:black ;
@@ -135,111 +136,151 @@
   transition: 1s;
 
 }
-nav .fa{
-  display: none;
-
+.header .hamburger {
+ display: none;
+ position: absolute;
 }
-
-@media(max-width: 700px){
-  .header{
-    position: relative;
+@media(max-width: 795px){
+* {
+  margin: 0;
+  left: 0;
+ top: 0;
+  font-family: "Poppins", "san-serif";
+  scroll-behavior: smooth;
   }
   .video-background{
-    position: fixed;
-  }
-  .header.text-box h1 {
-    font-size: 20px;
-    position: absolute;
-  }
-  .header .nav-links ul li{
-    display: block;
-  }
-  .header .nav-links {
     position: relative;
-    display: none;
-    height: 100vh;
-    width: 200px;
-    top: 0;
-    right: -100px;
-    text-align: left;
-    z-index: 2 ;
-    transition: 1s;
-    justify-content: left;
-    flex: 1;
-    text-align: right;
+    justify-content: center;
+    object-fit: cover;
   }
-  .header nav .fa{
-    display: block;
-    color: #fff;
-    margin: 5%;
-    font-size: 22px;
-    cursor: pointer;
-    margin-top: 1rem;
-
+  .video-background video {
+  position: absolute;
+  width: 110vw;
+  height: 100vh;
+  margin-left: -4rem;
+  margin-top: -6.7rem;
+  object-fit: cover;
+  overflow: hidden;
   }
-  .header .nav-links ul{
-    padding: 10px;
-  }
-
-
-}
-@media (max-width: 778px){
   .header{
-    position: relative;
+    display:flex;
+    width: 100%;
+    text-align: center;
+    justify-content: right;
+    margin-top:0 ;
 
+  }
+  .header .logo{
+    position: absolute;
+    font-size: 18px;
+    margin-left: -0.1px;
   }
   .header .nav-links{
     position: relative;
-    display: block;
-    justify-content: space-between;
     text-align: right;
-    line-height: 1.2;
-    z-index: 1000;
   }
-  .header nav ul {
+  .header .nav-links ul{
+  display: block;
+  flex-direction: column;
+  text-align: right;
+  justify-content: right;
+  flex: 1;
+  }
+  .header.nav-links li{
+  position: relative;
+  display: inline-block;
+  height: 2;
+  text-align: right;
+  padding: 5px 0;
+  width: 100%;
+  flex-basis: 100%;
+  }
+   .header .nav-links ul li a{
+    position: relative;
     display: flex;
-    flex: 1;
-    text-align: right;
-    justify-content:  right;
-    margin-right: -15px;
-  }
-  .header nav ul li{
-    margin: -2px;
-  }
-  .header .logo{
-    display: fixed;
-    font-size: 18px;
-    padding: 3% 8%;
-    margin-top: -2.5%;
-  }
-  .header .text-box{
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    top: 0;
+    left: 0;
+    width: 100%;
+
+    line-height: 1.3;
     align-items: center;
-    margin: 0 auto;
-    max-width: 90%;
+    text-decoration: none;
+    color: goldenrod;
   }
-  .header .text-box h1{
-    font-size: 22px;
+  .header.nav-links ul li::after {
+    content: '';
     position: absolute;
-    margin-top: 20rem;
+    left: 0;
+    width: 0;
+    height: 2px;
+    background: #f44336;
+    transition: width 0.3s ease;
+  }
+  .header.nav-links ul li:hover::after{
+    width: 100%;
+  }
+  .header .hamburger{
+    position: absolute;
+    display: flex;
+    justify-content: space-around;
+    width: 30px;
+    height: 21px;
+    cursor: pointer;
+    left: 45rem;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+  .header .hamburger .bar{
+    position: relative;
+    display: flex;
+    margin: -16rem;
+    height: 20px;
+    width: 10%;
+    background-color: yellow;
+    transition: all 0.3s ease;
+    cursor: pointer;
+  }
+  .text-box h1{
+    font-size: 30px;
+    position: absolute;
+    align-items: center;
+    justify-content: center;
+    margin-top: 22rem;
+    font-weight: 800;
+
   }
   .header .text-box p{
-    display: fixed;
     position: relative;
-    margin-top: 35rem;
+    margin-top: 25rem;
+    font-weight: 550;
+    color: #fff;
   }
-}*/
+  .services-row{
+    flex-direction: column;
+    gap: 5px;
+    padding-bottom: 10px;
+  }
+  .services{
+    width: 100%;
+    margin-bottom: 15px;
+  }
+  .About-us h3{
+    padding-bottom: 15px;
+  }
+
+}
+
+
 /*----------services-------*/
 .services{
+  position: relative;
   text-align: center;
   background-image: linear-gradient(rgba(4, 9, 30, 0.7)), url('Eduford-Assets/eduford_img/background.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   min-height: 100vh;
+  flex: 1;
 }
 .services nav {
   background: brown;
@@ -298,7 +339,7 @@ nav .fa{
 }
 .services h2{
   text-align: center;
-  color:black ;
+  color:white ;
   font-size: 18px;
   font-weight: 200;
   margin-top: 2%;
@@ -312,20 +353,25 @@ nav .fa{
   padding: 10px;
 
 }
-.services .row{
-  margin-top: 1%;
+.services-row{
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
+  flex-wrap: wrap;
+  margin: 45px 0 ;
+  gap: 10px;
+  padding: 0 10px;
+
 }
 .services-col{
-  flex-basis: 32%;
+  flex-basis:31%;
   background: #f1caca;
   border-radius: 10px;
-  margin: 45px;
-  margin-bottom: 5%;
-  padding: 8px 12px;
+  margin: 10px;
+  margin-bottom: 2%;
+  padding: 5px 10px;
   box-sizing: border-box;
-
+  transition: all 0.3s ease;
 }
 .services-col p{
   align-items: center;
@@ -346,17 +392,16 @@ nav .fa{
 .services-col:hover{
   box-shadow: 0 0 20px 0px rgb(0, 0,0,0.8);
 }
-@media(max-width: 775px){
+@media(max-width: 768px){
+
   .services {
-    position:relative;
+    align-items: center;
   }
   .services .logo {
     text-align: left;
     margin-left: -40px;
   }
   .services nav{
-    position: relative;
-    justify-content: space-between;
     padding: 3.5% 6%;
   }
   .services nav ul {
@@ -367,18 +412,17 @@ nav .fa{
     margin-right: -50px;
   }
   .services nav ul li{
-    margin: -2px;
+    margin: -2.3px;
   }
-  .services .row{
-    display: flex;
-
+  .services-row{
+    flex-direction: column;
   }
   .services-col{
-    flex-direction: column;
-
+    width: 95%;
+    margin: 30px auto;
   }
-
 }
+
 /*----- Office -----*/
 
 .Office{
@@ -401,7 +445,7 @@ nav .fa{
   width: auto;
   background:brown;
   display: flex;
-  padding: 2% 6%;
+  padding: 2% 5.5%;
   justify-content: space-between;
   align-items: center;
 }
@@ -470,13 +514,14 @@ nav .fa{
 }
 .Office-col .layer{
   background: transparent;
-  height: 100%;
+  height: 101%;
   width: 100%;
   position: absolute;
   top:0;
   border-radius:10px ;
   left: 0;
   transition: 0.5s;
+  border-radius: 10px;
 }
 .Office-col .layer:hover{
   background: rgba(226,0,0,0.7);
@@ -544,7 +589,7 @@ nav .fa{
   width: auto;
   background:brown;
   display: flex;
-  padding: 2% 6%;
+  padding: 2% 5.5%;
   justify-content: space-between;
   align-items: center;
 }
@@ -623,7 +668,8 @@ nav .fa{
   text-align: center;
 }
 .About-us-col h3{
-  margin-bottom: 18px;
+  margin-bottom: 15px;
+  padding-top: 10px;
   text-align: center;
   color: #f44336;
   font-weight: 700;
@@ -733,7 +779,7 @@ nav .fa{
 .Goals-col .fa{
   color:gold;
 }
-@media(max-width: 700px){
+/*@media(max-width: 700px){
   .Goals-col img{
     margin-left: 0px;
     margin-right: 15px;
@@ -745,27 +791,34 @@ nav .fa{
   text-align: center;
   justify-content: center;
   text-align: center;
-  padding: 50px 20px;
-  margin: 3%;
+  padding: 12rem 20px;
+  padding-bottom: 2rem;
+  margin: 8%;
   background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(Eduford-Assets/eduford_img/banner2.jpg);
   background-position: center;
   background-size: cover;
   border-radius: 10px;
+  margin-top: 4rem;
+}
+.contact-container{
+  position: relative;
+  display: flex;
+  max-width: 1200px;
 }
 .contact-box {
   position: relative;
-  display: flex;
-  width: 50%;
+  width: 60%;
   min-height: 100%;
   min-width: 70%;
-  margin-top: 20%;
   margin-left: 7%;
   text-align: center;
 }
 
 .contact h1{
-  position: absolute;
-  margin-top: -8rem;
+  position: relative;
+  margin-top: -10rem;
+  line-height: 1.5;
+  margin-left: 20%;
   color: #fff;
   text-align: center;
   justify-content: center;
@@ -782,6 +835,7 @@ nav .fa{
   background: transparent;
   position: relative;
   cursor: pointer;
+  margin-top: 2rem;
 }
 .contact-btn:hover {
   border: 1px solid #f44336;
@@ -790,20 +844,17 @@ nav .fa{
 
 }
 
-@media(max-width: 700px){
-  .contact h1{
-    font-size: 24px;
-  }
-}
 /*-----Footer----*/
 .footer{
   width: 100%;
   text-align: center;
   padding: 30px 0;
+  margin: -10%;
+  margin-left: 1%;
 }
 .footer h4{
   margin-bottom: 25px;
-  margin-top: 15px;
+  margin-top: 10px;
   font-weight: 600;
 }
 .footer p{
