--- a/style.css
+++ b/style.css
@@ -797,6 +797,10 @@
   cursor: pointer;
   padding: 18px 0;
 }
+.copyright {
+  position: ;
+}
 .fa-heart-o{
   color: #f44336;
+  display: block;
 }
