--- a/style.css
+++ b/style.css
@@ -54,13 +54,13 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1.5% 4%;
+  padding: 1.2% 4%;
   z-index: 1000;
   width: auto;
 
 }
 .nav-links ul{
-  gap: 5px;
+  gap: 25px;
   display:flex;
   list-style: none;
   padding: 2% 0;
@@ -93,9 +93,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 2px 6%;
+  padding: 0 1%;
   box-sizing: border-box;
   z-index: 1000;
+}
+.index-nav li {
+
 }
 .index-nav .nav-links a {
   color: gold;
@@ -426,6 +429,9 @@
   .more-nav .hero-btn {
   margin-right: -2rem;
   position: relative;
+  cursor: pointer;
+  font-size: medium;
+  z-index: 1;
   }
   .more .text-box {
     padding-top: 5rem;
@@ -447,7 +453,7 @@
 .services h1{
   position: relative;
   text-align: center;
-  padding-top: 2rem;
+  padding-top: 5rem;
   font-size: 4rem;
   font-weight: 600;
   color:#f1caca;
